--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -10,6 +10,12 @@
     text-decoration: none !important;
 }
 
+.navbar .btn{
+    background-color: #202329;
+    color: white;
+    border: none;
+}
+
 .navbar .btn:hover {
     background-color: #202329;
 }
